# ros_acados_nodegen

./: .gitignore  README.md  acados_install.sh  pyproject.toml
.github/instructions/: ros_acados_nodegen.instructions.md  safety_filter_mpc.instructions.md
.github/prompts/: ros_acados_nodegen.prompt.md  safety_filter_mpc.prompt.md
examples/: generate_safety_fiter_node.py  safety_filter_node_config.yaml
examples/safety_filter/: generate_safety_fiter_node.py  safety_filter_node_config.yaml
examples/safety_filter/scripts/: generate_solver.sh  safety_filter_mpc.py
examples/safety_filter/scripts/safety_filter_scripts/safety_filter_ocp/: solver.py
examples/scripts/: safety_filter_mpc.py
examples/scripts/safety_filter_scripts/safety_filter_ocp/: helper.py  simulation.py  solver.py
ros_acados_nodegen/: __init__.py  acados_installer.py  generator.py
ros_acados_nodegen/config/: all_config.yaml  all_configs.yaml  default_config.yaml
ros_acados_nodegen/context/: __init__.py  acados_context.py  context.py  pkg_context.py  ros_context.py
ros_acados_nodegen/renderer/: package_generator.py  paths.py
ros_acados_nodegen/templates/: CMakeLists.txt.j2  README.md.j2  config.hpp.j2  generate_solver.sh.j2  marker_publisher.hpp.j2  node.cpp.j2  node.h.j2  package.xml.j2  utils.hpp.j2
ros_acados_nodegen/utils/: context_utils.py  jinja_utils.py  logger.py
