# pyproject.toml

# ==============================================================================
# 1. Build-System Konfiguration
# ==============================================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ==============================================================================
# 2. Projekt-Metadaten und Abhängigkeiten
# ==============================================================================
[project]
name = "ros_acados_nodegen"
version = "0.1.0"
authors = [
  { name = "Lindemann, Josua", email = "josch961@gmail.com" },
]
description = "Ein Codegenerator für ROS Nodes, die Acados Solver verwenden."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jinja2",
    "pyyaml",
    "pydantic",
    "typeguard",
]


# ==============================================================================
# 3. Optionale Skripte
# ==============================================================================
[project.scripts]
acados-install = "ros_acados_nodegen.acados_installer:main"


[tool.setuptools.package-data]
ros_acados_nodegen = ["templates/*.j2"]